add _consumer, _FuncInterface